# hefty-freer-simple

./: LICENSE  README.md  hefty-freer-simple.cabal
src/Control/Monad/: Freer.hs
src/Control/Monad/Freer/: Coroutine.hs  Error.hs  Internal.hs  NonDet.hs  Reader.hs  State.hs  Writer.hs
src/Data/: OpenUnion.hs
src/Data/OpenUnion/: Internal.hs
